--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "spatie/laravel-medialibrary": "^9.0.0",
-        "spatie/laravel-permission": "^4.2"
+        "spatie/laravel-permission": "^4.2",
+        "yajra/laravel-datatables": "^1.5",
+        "yajra/laravel-datatables-html": "^4.0",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
